poke/testsuite/poke.pkl/ass-map-diag-2.pk
/* { dg-do compile } */

deftype Packet = struct { int i; long j; };

defvar p = Packet @ 0#B;
Packet @ 0#B = p;  /* { dg-error "l-value.*simple type" } */
